# qt-programming-2025

./: CMakeLists.txt
assets/: assets.qrc
src/: MyGame.cpp  MyGame.h  main.cpp
src/Items/: Armor.h  ArmorFactory.h  ArmorType.h  Consumable.h  ConsumableFactory.h  ConsumableType.h  DropItem.cpp  DropItem.h  Item.cpp  Item.h  Platform.cpp  Platform.h  Weapon.h  WeaponFactory.h  WeaponType.h
src/Items/Armors/: HeavyArmor.h  LightArmor.h
src/Items/Characters/: SimpleCharacter.cpp  SimpleCharacter.h
src/Items/Consumables/: Adrenaline.h  Bandage.h  Medkit.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Items/Weapons/: Ball.h  Fist.h  Knife.h  Rifle.h  Sniper.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
